syntax = "proto3"; 

option csharp_namespace = "Coding.Blog.Library.Protos"; 

import "google/protobuf/timestamp.proto"; 
import "google/protobuf/duration.proto";
import "Protos/Image.proto";

service Posts { 
	rpc GetPosts (PostsRequest) returns (PostsReply); 
} 

message PostsRequest {}

message PostsReply { 
	repeated Post posts = 1; 
} 

message Post {
	string slug = 1;
	string title = 2;
	string content = 3;
	string tags = 4;
	Image image = 5;
	google.protobuf.Timestamp datePublished = 6;
	google.protobuf.Duration readingTime = 7;
}
